--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">projeto social para pessoas carentes</h5>
-                        <p class="card-text">iria criar uma instituição
+                        <p class="card-text">iria criar uma instituição onde ia ajudar pessoas carentes, dando um lar, comida e roupas novas em meio doações.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o projeto</button>
